# whispy

./: .gitignore  CLAUDE.md  Cargo.toml  Info.plist  LICENSE  README.md
assets/: AppIcon.icns
scripts/: install.sh  uninstall.sh
src/: app.rs  audio.rs  config.rs  hotkey.rs  main.rs  overlay.rs  overlay_html.rs  paste.rs  permissions.rs  preferences.rs  preferences_html.rs  transcribe.rs  tray.rs
