[package]
name = "whispy"
version = "0.1.0"
edition = "2021"

[dependencies]
tao = "0.35"
tray-icon = "0.21"
global-hotkey = "0.7"
cpal = "0.17"
hound = "3.5"
reqwest = { version = "0.13", features = ["multipart", "json"] }
tokio = { version = "1", features = ["rt", "macros", "time"] }
arboard = "3.6"
enigo = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
image = "0.25"
dirs = "6"
core-foundation = "0.10"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSColor", "NSApplication"] }
wry = { version = "0.51", features = ["transparent"] }
http = "1"
